--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,5 +56,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "GameDevProjekt.sln"
+    "dotnet.defaultSolution": "gamedev_eksamensproject_2025.sln"
 }
